--- a/index.html
+++ b/index.html
@@ -331,42 +331,19 @@
 			<!-- workflow steps -->
 			<div class="row widerow">
 				<!-- workflow step -->
-				<div class="bubbleInfo work-section-grid desktop-two-point-four columns">
-					<div class="trigger wow fadeInUp" data-wow-delay="0.4s">
+				<div class=" work-section-grid desktop-two-point-four columns">
+					<div class=" wow fadeInUp" data-wow-delay="0.4s">
 						<h3>{{steps[0].name}}</h3>
 						<p class="step">Job Name: {{steps[0].jobname}}</p>
 						<span class="arrow1"><img src="images/arrow1.png" alt="" /></span>
 					</div>
-					<table id="dpop" class="popup">
-						<tbody>
-							<tr>
-								<td id="topleft" class="corner"></td>
-								<td class="top"></td>
-								<td id="topright" class="corner"></td>
-							</tr>
-							<tr>
-								<td class="left"></td>
-								<td>
-									<div class="popup-contents">
-										{{steps[0].popup}}
-									</div>
-								</td>
-								<td class="right"></td>
-							</tr>
-							<tr>
-								<td class="corner" id="bottomleft"></td>
-								<td class="bottom"><img width="30" height="29" alt="popup tail" src="images/bubble-tail2.png"/></td>
-								<td id="bottomright" class="corner"></td>
-							</tr>
-						</tbody>
-					</table>
 				</div>
 
 				<!-- workflow step -->
 				<div class="bubbleInfo work-section-grid desktop-two-point-four columns">
 					<div class="trigger wow fadeInUp" data-wow-delay="0.6s">
 						<h3>{{steps[1].name}}</h3>
-						<p class="step">{{steps[1].stepname}}</br>Duration: {{steps[1].duration}}</p>
+						<p class="step">{{steps[1].stepname}}</br>Data Size: {{steps[1].datasize}}</br>Duration: {{steps[1].duration}}</p>
 						<span class="arrow1"><img src="images/arrow1.png" alt="" /></span>
 					</div>
 					<table id="dpop" class="popup">
@@ -779,34 +756,11 @@
 				</div>
 
 				<!-- workflow step -->
-				<div class="bubbleInfo work-section-grid desktop-two-point-four columns">
-					<div class="trigger wow fadeInUp" data-wow-delay="2.8s">
+				<div class=" work-section-grid desktop-two-point-four columns">
+					<div class=" wow fadeInUp" data-wow-delay="2.8s">
 						<h3>{{steps[14].name}}</h3>
 						<p class="step">Duration: {{steps[14].duration}}</br>MapReduce Waiting: {{steps[14].mrwaiting}}</p>
 					</div>
-					<table id="dpop" class="popup">
-						<tbody>
-							<tr>
-								<td id="topleft" class="corner"></td>
-								<td class="top"></td>
-								<td id="topright" class="corner"></td>
-							</tr>
-							<tr>
-								<td class="left"></td>
-								<td>
-									<div class="popup-contents">
-										{{steps[14].popup}}
-									</div>
-								</td>
-								<td class="right"></td>
-							</tr>
-							<tr>
-								<td class="corner" id="bottomleft"></td>
-								<td class="bottom"><img width="30" height="29" alt="popup tail" src="images/bubble-tail2.png"/></td>
-								<td id="bottomright" class="corner"></td>
-							</tr>
-						</tbody>
-					</table>
 				</div>
 			</div>
 		</section>
