multi-language support

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 		</section>
 
 		<!-- data-model -->
-		<section id="data-model" class="data-model" ng-controller="modelCtrl">
+		<section id="data-model" class="data-model">
 			<div class="row">
 				<div class="ten columns offset-by-one title wow bounceIn">
 					<h1>{{ 'Glance over' | translate }}</h1>
